--- a/src/pages/ChatRoom/components/MessageList/index.module.less
+++ b/src/pages/ChatRoom/components/MessageList/index.module.less
@@ -35,10 +35,10 @@
   transform: translateY(-50%);
 
   &.left {
-    left: 1em;
+    left: 6px;
   }
   &.right {
-    right: 1em;
+    right: 6px;
   }
 }
 
